cmake_minimum_required(VERSION 3.23)
project(c_plus)

set(CMAKE_CXX_STANDARD 14)

#add_executable(c_plus
#        oop/MyDate.h oop/MyDate.cpp oop/students.cpp oop/students.h)

#add_executable(c_plus
#        oop/my_date.h oop/my_date.cpp oop/student.h oop/const_member.cpp)

add_executable(c_plus
        operator_overload/my_complex.cpp)