cmake_minimum_required(VERSION 3.23)
project(c_plus)

set(CMAKE_CXX_STANDARD 14)

add_executable(hello hello_cpp/hello.cpp)
add_executable(number_type data_type/number_type.cpp)
add_executable(type_conversion data_type/type_conversion.cpp)
add_executable(const_point data_type/const_point.cpp)
add_executable(base oop/inherit/base.cpp)
add_executable(class_oop oop/sizeof/class_size.cpp)
add_executable(inherit_permission oop/permission/inherit_permission.cpp)
add_executable(constant data_type/constant.cpp)
add_executable(string_type data_type/string_type.cpp)
add_executable(bool_type data_type/bool_type.cpp)
add_executable(pointer_example pointer/pointer_example.cpp)
add_executable(pointer pointer/pointer_array.cpp)
add_executable(struct_demo structs/struct_demo.cpp)
add_executable(which_func reference/which_func.cpp)
add_executable(class_member oop/clazz/class_member.cpp)
add_executable(const_example oop/clazz/const_example.cpp)
add_executable(friend_example oop/clazz/friend_example.cpp)